Fix image widths on mobile science page

--- a/css/science.styl
+++ b/css/science.styl
@@ -23,6 +23,7 @@
       max-width: 50vw
     
     img
+      max-width: 80vw
       border: 4px solid $white
       border-radius: 2px
       box-shadow: -2px 2px 3px 0 rgba($black, 0.5)
